syntax = "proto3";

package messages;
option go_package = "github.com/swkoubou/torch/server/view/pb/messages";

message SpotLikeRequest {
    uint32 spot_id = 1;
}