syntax = "proto3";

package messages;
option go_package = "github.com/swkoubou/torch/server/view/pb/messages";

message SpotLikeResponse {
    string message = 1;
}